[tool.poetry]
name = "sqlformatter"
version = "1"
description = "Noah's opinionated SQL formatter"
authors = ["Noah Yetter <nyetter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Pygments = "^2.12.0"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
pytest = "^7.1.1"
pudb = "^2022.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
